# egui_xp

./: .gitignore  Cargo.toml  README.md  ad_deps.csv  committed.toml  egui_xp.js  egui_xp_bg.wasm  index.html  justfile  rust-toolchain.toml  rustfmt.toml  sw.js
.github/workflows/: pages.yml
.support/: _template.env
.support_data/: template.env
examples/: simple.rs  table.rs
src/: app.rs  lib.rs  main.rs  support.rs
src/support/: error_native.rs  error_wasm.rs  subscriber.rs
