[package]
name = "egui-xp"
version = "0.1.0"
authors = ["Ethan S-L <ethanmsl@gmail.com>"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
# rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
allow_attributes = "warn"

[dependencies]
# |---_ (user) Dependencies _---|
# ## --Async--
# futures = "0.3.31"
# tokio = { version = "1.42.0", features = ["full"] }
# ### - Networking -
# reqwest = { version = "0.12.9", features = ["blocking", "json"] }

# ## --Diagnostics--
# see target native & target web

# ## --Env & Files--
# arboard = "3.4.1"
# csv = "1.3.1"
# dotenvy = "0.15.7"
# include_dir = "0.7.4"
# secrecy = "0.10.3"
# walkdir = "2.5.0"

## --Ergonomics--
bon = "3.2.0"
derive_more = { version = "1.0.0", features = ["full"] }
# indoc = "2.0.5"
# itertools = "0.13.0"
# nestify = "0.3.3"
# strum = { version = "0.26.3", features = ["derive", "phf"] }

## --Interface--
# ### - CLI -
# clap = { version = "4", features = [
#     "env",
#     "cargo",
#     "derive",
#     "string",
#     "unicode",
#     "wrap_help",
# ] }
# dialoguer = "0.11"
# owo-colors = "4"
# indicatif = "0.17"
# tabled = "0.17.0"
# json_to_table = "0.9"
### - egui -
eframe = { version = "0.30", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
egui = { version = "0.30.0", features = ["callstack", "document-features"] }
egui_extras = { version = "0.30.0", features = [
    "datepicker",
    "document-features",
    "serde",
    "syntect",
] }
egui_plot = { version = "0.30.0", features = ["document-features"] }
egui_table = "0.2.0"
# egui_inbox = "0.7.0"

# ## --Math--
# rand = "0.8.5"

## --Other--
jiff = { version = "0.1.16", features = ["js", "logging", "serde"] }
#                                           "tzdb-bundle-always" ^

## --Parsing--
# regex = { version = "1.11.1", features = ["logging"] }
serde = { version = "1.0.215", features = ["derive"] }
# serde_json = "1.0.133"

# ## --Performance--
# dashmap = { version = "6.1.0", features = ["serde", "rayon", "arbitrary"] }
# regex-automata = "0.4.9"
# rayon = "1.10.0"
# tinyvec = { version = "1.8.0", features = ["serde"] } # safe array/small vec, but requires Default for elements

[dev-dependencies]
# |---_ Dev-Dependencies _---|
## --Dev-Ergonomics--
pretty_assertions = "1.4.1"
## --Property Sample Testing--
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
## --Test Trace-Logging--
test-log = { version = "0.2.16", features = ["trace"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# |---_ TARGET: native _---|
## --Diagnostics--
tracing = { version = "0.1.41", features = [] }
# tracing = { version = "0.1.41", features = ["release_max_level_warn"] }
# tracing = { version = "0.1.41", features = ["release_max_level_off"] }
tracing-appender = "0.2.3"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
# tracing-timing = "0.6.0"
## --Other--

[target.'cfg(target_arch = "wasm32")'.dependencies]
# |---_ TARGET: web _---|
## --Diagnostics--
log = "0.4"
tracing = { version = "0.1.41", features = ["release_max_level_off"] }
## --Other--
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

# for use with perf-analysis tools like `samply`
[profile.profiling]
inherits = "release"
debug = true

[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
